# simple_pybullet_ros2

./: .gitignore  README.md
Dockerfile/: Dockerfile  entrypoint.sh  run.sh
pybullet_panda/: package.xml  setup.cfg  setup.py
pybullet_panda/config/: move_group.rviz  panda.srdf  panda_controllers.yaml  panda_ros_controllers.yaml
pybullet_panda/launch/: collision.launch.py  moveit.launch.py  moveit_controller.launch.py  run_move_group.launch.py  stack_cubes.launch.py  throw_collision.launch.py  throw_cubes.launch.py  throw_moveit_controller.launch.py  vrep.launch.py
pybullet_panda/pybullet_panda/: panda.py  pybullet_panda.py  trajectory_follower.py
pybullet_panda/urdf/: panda.urdf
sim_recorder/: package.xml  setup.cfg  setup.py
sim_recorder/data/: README.md
sim_recorder/data/webots/: run.txt
sim_recorder/data/webots/cpu/: cpu_1.csv
sim_recorder/data/webots/log/: 1.txt
sim_recorder/data/webots/ram/: ram_1.csv
sim_recorder/sim_recorder/: clock_logger.py  grapher.py  proc_monitor.py  run_recording.py
sim_spawner/: package.xml  setup.cfg  setup.py
sim_spawner/sim_spawner/: pybullet_spawner.py  spawner.py  throw_spawner.py
simple_arm_control/: CMakeLists.txt  package.xml
simple_arm_control/include/: service_handler.hpp  shared.hpp  simple_moveit.hpp
simple_arm_control/src/: moveit_collision.cpp  moveit_controller.cpp  moveit_throw_controller.cpp  simple_moveit.cpp  throw_moveit.cpp
simple_interface/: CMakeLists.txt  package.xml
simple_interface/srv/: SetObjectActive.srv
