<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pybullet_panda</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2330834a@student.gla.ac.uk">ubb</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>moveit_ros_planning_interface</depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros-foxy-ros2-control</exec_depend>
  <exec_depend>ros-foxy-ros2-controllers</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>warehouse_ros_mongo</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
