<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_spawner</name>
  <version>1.0.0</version>
  <description>Spawn object in both simulation and run the services to get their positions</description>
  <maintainer email="2330834a@student.gla.ac.uk">Florent Audonnet</maintainer>
  <license>BSD 3-Clause License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <depend>simple_interface</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>pyquaternion</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
